site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprintbot-site
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sprintbot-site
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
