site/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: sprintbot
spec:
  rules:
  - host: www.sprintbot.io
    http:
      paths:
      - backend:
          serviceName: sprintbot-site
          servicePort: 80
        path: /
  - host: sprintbot.io
    http:
      paths:
        - backend:
            serviceName: sprintbot-site
            servicePort: 80
          path: /
  tls:
  - hosts:
    - www.sprintbot.io
    secretName: wwwsprintbot-tls
  - hosts:
      - sprintbot.io
    secretName: sprintbot-tls
